Use lowercase label for svg color

--- a/LabyrinthianDemo/Shared/SvgFields/SvgFillField.razor
+++ b/LabyrinthianDemo/Shared/SvgFields/SvgFillField.razor
@@ -8,7 +8,7 @@
 	@if (fillType == SvgFillType.SolidColor)
 	{
 		<MudColorPicker @bind-Value="solidColor" @bind-Value:after="Update"
-						Label="Color" DisableAlpha="true" />
+						Label="color" DisableAlpha="true" />
 	}
 </MudStack>
 
