Enhance ignored properties for edges and solutions

--- a/LabyrinthianDemo/Shared/MazeVisualsForm.razor
+++ b/LabyrinthianDemo/Shared/MazeVisualsForm.razor
@@ -51,7 +51,7 @@
 
 @code {
 	private string[] IgnoredWallsProperties = { "d", "stroke-width" };
-	private string[] IgnoredEdgesProperties = { "fill" };
+	private string[] IgnoredEdgesProperties = { "fill", "fill-opacity" };
 	private string[] IgnoredNodesProperties = { "id" };
 
 	private async Task Rerender()
