--- a/LabyrinthianDemo/Pages/Index.razor
+++ b/LabyrinthianDemo/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using System.Xml;
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Labyrinthian Demo</PageTitle>
 
 <MudText Typo="Typo.h3" Align="Align.Center">Labyrinthian Demo</MudText>
 
