--- a/LabyrinthianDemo/Shared/MazeVisualsForm.razor
+++ b/LabyrinthianDemo/Shared/MazeVisualsForm.razor
@@ -16,6 +16,7 @@
 						 Label="Indent" />
 			<SvgFillField @bind-Fill="RendererState.BackgroundFill"
 						  Label="Background" />
+			<MudText Typo="Typo.h6"><MudIcon Icon="@Icons.Material.Filled.GridOn" />Maze</MudText>
 			<MudExpansionPanels>
 				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.WallsPath"
 											Text="Walls" IgnoredProperties="@IgnoredWallsProperties">
@@ -28,14 +29,11 @@
 											Text="Solution" IgnoredProperties="@IgnoredEdgesProperties" />
 				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.AllCellsGroup"
 											Text="Cells" DisabledByDefault="true" />
-				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.UnvisitedCellsGroup"
-											Text="Unvisited Cells" />
-				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.HighlightedCellsGroup"
-											Text="Highlighted Cells" />
-				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.SelectedCellGroup"
-											Text="Selected Cell" />
+			</MudExpansionPanels>
+			<MudText Typo="Typo.h6"><MudIcon Icon="@Icons.Material.Filled.AccountTree" />Graph</MudText>
+			<MudExpansionPanels>
 				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.NodesGroup"
-											Text="Graph Nodes" IgnoredProperties="@IgnoredNodesProperties"
+											Text="Graph Nodes"
 											DisabledByDefault="true" />
 				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.EdgesPath"
 											Text="Graph Edges" IgnoredProperties="@IgnoredEdgesProperties"
@@ -43,6 +41,24 @@
 				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.PassagesPath"
 											Text="Walkable Graph Edges" IgnoredProperties="@IgnoredEdgesProperties"
 											DisabledByDefault="true" />
+			</MudExpansionPanels>
+			<MudText Typo="Typo.h6"><MudIcon Icon="@Icons.Material.Filled.Animation" />Animation</MudText>
+			<MudExpansionPanels>
+				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.UnvisitedCellsGroup"
+											Text="Unvisited Cells" />
+				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.HighlightedCellsGroup"
+											Text="Highlighted Cells" />
+				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.SelectedCellGroup"
+											Text="Selected Cell" />
+			</MudExpansionPanels>
+			<MudText Typo="Typo.h6"><MudIcon Icon="@Icons.Material.Filled.Animation" />Graph animation</MudText>
+			<MudExpansionPanels>
+				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.UnvisitedNodesGroup"
+											Text="Unvisited Nodes" DisabledByDefault="true" />
+				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.HighlightedNodesGroup"
+											Text="Highlighted Nodes" DisabledByDefault="true" />
+				<ExportModuleExpansionPanel @bind-ExportModule="RendererState.SelectedNodeGroup"
+											Text="Selected Node" DisabledByDefault="true" />
 			</MudExpansionPanels>
 			<MudButton Variant="Variant.Filled" Color="Color.Tertiary"
 					   OnClick="Rerender">
@@ -55,7 +71,6 @@
 @code {
 	private string[] IgnoredWallsProperties = { "d", "stroke-width" };
 	private string[] IgnoredEdgesProperties = { "fill", "fill-opacity" };
-	private string[] IgnoredNodesProperties = { "id" };
 
 	private async Task Rerender()
 	{
