Ignore "d" attribute for edges

--- a/LabyrinthianDemo/Shared/MazeVisualsForm.razor
+++ b/LabyrinthianDemo/Shared/MazeVisualsForm.razor
@@ -73,7 +73,7 @@
 
 @code {
 	private string[] IgnoredWallsProperties = { "d", "stroke-width" };
-	private string[] IgnoredEdgesProperties = { "fill", "fill-opacity" };
+	private string[] IgnoredEdgesProperties = { "d", "fill", "fill-opacity" };
 
 	private async Task Rerender()
 	{
