Upgrade to .net9

--- a/LabyrinthianDemo/Shared/ExportModuleExpansionPanel.razor
+++ b/LabyrinthianDemo/Shared/ExportModuleExpansionPanel.razor
@@ -2,7 +2,7 @@
 
 <MudExpansionPanel @bind-IsExpanded="expanded">
 	<TitleContent>
-		<MudCheckBox @bind-Checked="enabled" @bind-Checked:after="Update"
+		<MudCheckBox @bind-Value="enabled" @bind-Value:after="Update"
 					 Label="@Text" Color="Color.Secondary" />
 	</TitleContent>
 	<ChildContent>
