--- a/LabyrinthianDemo/Shared/NeighborSelection.razor
+++ b/LabyrinthianDemo/Shared/NeighborSelection.razor
@@ -1,4 +1,4 @@
-﻿<MudCheckBox @bind-Checked="useHeatMap" @bind-Checked:after="Update"
+﻿<MudCheckBox @bind-Value="useHeatMap" @bind-Value:after="Update"
 			 Label="Use heat maps" Color="Color.Primary" />
 @if (useHeatMap)
 {
