--- a/LabyrinthianDemo/Shared/SvgFields/SvgFloatField.razor
+++ b/LabyrinthianDemo/Shared/SvgFields/SvgFloatField.razor
@@ -1,4 +1,4 @@
-﻿<MudCheckBox @bind-Checked="enabled" @bind-Checked:after="Update"
+﻿<MudCheckBox @bind-Value="enabled" @bind-Value:after="Update"
 			 Label="@($"{Label}: ")" Color="Color.Tertiary" />
 @if (enabled)
 {
