--- a/LabyrinthianDemo/Shared/MainLayout.razor
+++ b/LabyrinthianDemo/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
         </article>
     </main>
 </div>
-<MudThemeProvider/>
+<MudThemeProvider />
+<MudPopoverProvider />
 <MudDialogProvider/>
 <MudSnackbarProvider/>
